# inclusion

./: README.md  preprocessor.py  pyproject.toml  requirements.py
clarity_libs/: coinfabrik-auth.clar
examples/: include-example-out.clar  include-example.clar  require-example-out.clar  require-example.clar
libs/: coinfabrik-auth.clar  coinfabrik-math.clar  coinfabrik-utils.clar
src/: dependencies.py
src/inclusion/: __init__.py  __main__.py  cli.py  libs.py  preprocessor.py  requirements.py
src/inclusion/test/: preprocessor.py  requirements.py
test/: include-example-out.clar  include-example.clar  require-example-out.clar  require-example.clar
