[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "inclusion"
description = "Library management for Clarity"
authors = [{name = "Franco Bregante", email = "fbregante9@gmail.com"}]
readme = "README.md"
license = {file = "LICENSE"}
keywords = ["library", "clarity", "stacks", "coinfabrik"]

version = "0.0.5"
dependencies = [
  "tree-sitter",
  "ts-clarity>=0.0.5",
]
requires-python = ">= 3.8"

[project.scripts]
inclusion-cli = "inclusion.cli:main"
